# fail-rs

./: Cargo.toml
src/: lib.rs
