[package]
name = "fail"
version = "0.4.0"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["failpoints", "fail"]
repository = "https://github.com/tikv/fail-rs"
readme = "README.md"
homepage = "https://github.com/tikv/fail-rs"
documentation = "https://docs.rs/fail"
description = "Fail points for rust."
categories = ["development-tools::testing"]
edition = "2018"
exclude = ["/.github/*", "/.travis.yml", "/appveyor.yml"]

[dependencies]
log = { git = "https://github.com/mesalock-linux/log-sgx", branch = "master", features = ["kv_unstable"] }
lazy_static = { version = "1.1.0",  features = ["spin_no_std"] }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2", features = ["small_rng"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace","untrusted_time"] }

[features]
failpoints = []

[package.metadata.docs.rs]
all-features = true
